--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
 .email{
         height: 40px;
         width: 300px;
-        border-radius: 20px;
+        border-radius: 10px;
         border: solid 2px white;
         position: fixed;
         margin-top: -200px;
@@ -27,7 +27,7 @@ body{
 .senha{
         height: 40px;
         width: 300px;
-        border-radius: 20px;
+        border-radius: 10px;
         border: solid 2px white;
         position: fixed;
         margin-top: -75px;
@@ -35,8 +35,55 @@ body{
 
 .email::placeholder{
         font-family: 'Courier New', Courier, monospace;
+        font-size: 15px;
     }
 
 .senha::placeholder{
     font-family: 'Courier New', Courier, monospace;
+    font-size: 15px;
 }    
+
+.bentrar{
+    position: fixed;
+    color: white;
+    background-color: rgb(24, 0, 161);
+    border-radius: 10px;
+    height: 50px;
+    width: 300px;
+    margin-top: 50px;
+    font-family: 'Courier New', Courier, monospace;
+    border: solid 2px rgb(24, 0, 161);
+    font-size: 18px;
+    font-weight: bold;
+}
+
+.bentrar:hover{
+    cursor: pointer;
+    border: solid 2px white;
+}
+
+.texto{
+    position: fixed;
+    margin-top: 150px;
+    color: white;
+    text-decoration: none;
+}
+
+.bcconta{
+    position: fixed;
+    color: white;
+    background-color: rgb(0, 189, 60);
+    border-radius: 10px;
+    height: 50px;
+    width: 200px;
+    margin-top: 350px;
+    font-family: 'Courier New', Courier, monospace;
+    border: solid 2px rgb(0, 189, 60);
+    font-size: 16px;
+    font-weight: bold;
+}
+
+.bcconta:hover{
+    cursor: pointer;
+    border: solid 2px white;
+}
